# Local-LLM-Kickstart

./: .gitignore  README Kopie.md  README.md  app_config.json  llama_server_options.txt  llm_config.json  llm_kickstart.py  llm_kickstart_cli.py  llm_kickstart_editor_ui.py  llm_kickstart_ui.py  pyproject.toml  requirements.txt  termux_compile_llamacpp.sh  termux_install.sh
examples/: start_endpoint.py
llm_kickstart/: .gitignore  api_test.py  llm_kickstart.py  llm_kickstart_app_config_editor_ui.py  llm_kickstart_cli.py  llm_kickstart_cli_rag.py  llm_kickstart_editor_ui.py  llm_kickstart_rag_server.py  llm_kickstart_ui.py  llm_kickstart_vectorstore.py  llm_server.py  rag_server.py  test_clip.py  utils_rag.py  utils_summarize.py  vectorstore.py
llm_kickstart/exampleconfig/: llm_config.json
resources/: model_catalog.json
src/chatshell/: chatshell_core.py  chatshell_server.py  context_manager.py  llm_server.py
