[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-kickstart"
version = "0.1.0"
description = "Local LLM Kickstart - An easy tool for starting local LLM inference endpoints."
authors = [
  { name = "Julian Schweigert", email = "j-schweigert@gmx.de" }
]
readme = "README.md"
requires-python = ">=3.8"

# Minimal base dependencies (CLI baseline)
dependencies = [
    "appdirs"
]

# Optional extras
[project.optional-dependencies]
ui = ["PyQt5>=5.15"]

# Define a "cli" extra that doesn't add anything extra — just for naming convenience
cli = []

[project.scripts]
llm-kickstart-ui = "llm_kickstart.llm_kickstart_ui:main"
llm-kickstart-cli = "llm_kickstart.llm_kickstart_cli:main"
